vlib/v/checker/tests/wrong_option_unwrap_err.vv
fn main() {
	a := ?string('c')
	b := a or { none }
	println(b)
}
